--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.4",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.11",
     "sharp": "^0.25.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
